kitty: use more modern variable ttf font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,9 @@
-font_family      Caskaydia Cove SemiLight Nerd Font Complete Mono
-bold_font        Caskaydia Cove Bold Nerd Font Complete Mono
-italic_font      Cascadia Code SemiLight Italic
-bold_italic_font Cascadia Code Bold Italic
-font_features    CascadiaCode-SemiLightItalic +ss01
-font_features    CascadiaCode-BoldItalic +ss01
+font_family      family='Cascadia Code NF' style=SemiLight variable_name=CascadiaCodeNFRoman
+bold_font        family='Cascadia Code NF' style=Bold variable_name=CascadiaCodeNFRoman
+italic_font      family='Cascadia Code NF' style='SemiLight Italic' variable_name= features=+ss01
+bold_italic_font family='Cascadia Code NF' style=Bold variable_name= features=+ss01
 
-font_size 14.0
+font_size 16.0
 
 force_ltr yes
 
