separate window keybinds for vim and kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -107,18 +107,17 @@ map kitty_mod+h         show_scrollback
 allow_remote_control yes
 listen_on unix:@jonathanskitty
 
-map kitty_mod+enter     launch --cwd=current
 map ctrl+space>w close_window
 map ctrl+space>- launch --location=hsplit --cwd=current
 map ctrl+space>/ launch --location=vsplit --cwd=current
-map ctrl+h kitten pass_keys.py neighboring_window left ctrl+h
-map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
-map ctrl+k kitten pass_keys.py neighboring_window top ctrl+k
-map ctrl+l kitten pass_keys.py neighboring_window right ctrl+l
-map alt+h kitten pass_keys.py resize_window narrower alt+h
-map alt+j kitten pass_keys.py resize_window shorter alt+j
-map alt+k kitten pass_keys.py resize_window taller alt+k
-map alt+l kitten pass_keys.py resize_window wider alt+l
+map ctrl+h neighboring_window left
+map ctrl+j neighboring_window bottom
+map ctrl+k neighboring_window top
+map ctrl+l neighboring_window right
+map kitty_mod+h resize_window narrower 2
+map kitty_mod+j resize_window shorter 2
+map kitty_mod+k resize_window taller 2
+map kitty_mod+l resize_window wider 2
 map kitty_mod+r start_resizing_window
 
 
@@ -144,12 +143,12 @@ map kitty_mod+p>h kitten hints --type hash --program -
 map kitty_mod+p>n kitten hints --type linenum # TODO open in VSCode
 map kitty_mod+p>y kitten hints --type hyperlink
 
-+# click url or move cursor
-+mouse_map left click ungrabbed mouse_handle_click selection link prompt
-+show_hyperlink_targets yes
-+
-+# open url with keyboard
-+map ctrl+space>o open_url_with_hints
+# click url or move cursor
+mouse_map left click ungrabbed mouse_handle_click selection link prompt
+show_hyperlink_targets yes
+
+# open url with keyboard
+map ctrl+space>o open_url_with_hints
 
 map kitty_mod+u      kitten unicode_input
 
