iterate on new windowing keybinds

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -103,10 +103,6 @@ map ctrl+space>p paste_from_clipboard
 map kitty_mod+h         show_scrollback
 
 
-# nvim and windowing setup
-allow_remote_control yes
-listen_on unix:@jonathanskitty
-
 map ctrl+space>w close_window
 map ctrl+space>- launch --location=hsplit --cwd=current
 map ctrl+space>/ launch --location=vsplit --cwd=current
@@ -114,12 +110,11 @@ map ctrl+h neighboring_window left
 map ctrl+j neighboring_window bottom
 map ctrl+k neighboring_window top
 map ctrl+l neighboring_window right
-map kitty_mod+h resize_window narrower 2
-map kitty_mod+j resize_window shorter 2
-map kitty_mod+k resize_window taller 2
-map kitty_mod+l resize_window wider 2
-map kitty_mod+r start_resizing_window
-
+map ctrl+, resize_window narrower 2
+map ctrl+- resize_window shorter 2
+map ctrl+= resize_window taller 2
+map ctrl+. resize_window wider 2
+map ctrl+r start_resizing_window
 
 map ctrl+space>n next_tab
 map ctrl+space>p previous_tab
