add config for ts

--- a/.config/kitty/ssh.conf
+++ b/.config/kitty/ssh.conf
@@ -1,2 +1,9 @@
+hostname *
 copy .bashrc .vimrc
+share_connections no
+
+hostname seliiuts*
+env KITTY_SSH_SETUP=done
+copy --dest .bashrc.user .bashrc
+copy .vimrc
 share_connections no
